src/objects/ADvendio__AdSpecRecommendation__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecommendedAdSpec__c</fullName>
        <label>Recommended Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Ad Spec Recommendations (Recommended Ad Spec)</relationshipLabel>
        <relationshipName>AdSpecsRecommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__RecommendedSpecialDiscount__c</fullName>
        <label>Recommended Special Discount</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__TriggeringAdSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Ad Spec</label>
        <referenceTo>ADvendio__Ad_Specs__c</referenceTo>
        <relationshipLabel>Triggered Ad Specs</relationshipLabel>
        <relationshipName>TriggeredAdSpecRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__TriggeringAdType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Ad Spec Recommendations</relationshipLabel>
        <relationshipName>AdSpecRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__TriggeringPlacement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Ad Spec Recommendations</relationshipLabel>
        <relationshipName>AdSpecRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__TriggeringSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>Ad Spec Recommendations</relationshipLabel>
        <relationshipName>AdSpecRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <label>Valid until</label>
        <type>Date</type>
    </fields>
    <label>Ad Spec Recommendation</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASR-{00000}</displayFormat>
        <label>Ad Spec Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Spec Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>